--- a/news/app/src/main/res/layout/activity_doc_detail.xml
+++ b/news/app/src/main/res/layout/activity_doc_detail.xml
@@ -162,7 +162,8 @@
                         android:gravity="center"
                         android:text="收藏"
                         android:textColor="@color/white"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <LinearLayout
