--- a/news/app/src/main/res/layout/fragment_fourth.xml
+++ b/news/app/src/main/res/layout/fragment_fourth.xml
@@ -96,78 +96,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
-            android:drawableLeft="@mipmap/my_collect_icon"
+            android:drawableLeft="@mipmap/my_wallet_icon"
             android:drawablePadding="16dp"
             android:gravity="center_vertical"
             android:text="我的钱包"
-            android:textColor="#333"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:padding="16dp"
-            android:src="@mipmap/step_arrow_icon" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="16.5dp"
-        android:layout_marginRight="16.5dp"
-        android:background="@color/divide" />
-
-    <RelativeLayout
-        android:id="@+id/rl_mycollect"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@drawable/ripple_white_bg">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:drawableLeft="@mipmap/my_collect_icon"
-            android:drawablePadding="16dp"
-            android:gravity="center_vertical"
-            android:text="我的收藏"
-            android:textColor="#333"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:padding="16dp"
-            android:src="@mipmap/step_arrow_icon" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="16.5dp"
-        android:layout_marginRight="16.5dp"
-        android:background="@color/divide" />
-
-    <RelativeLayout
-        android:id="@+id/rl_my_subscibe"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@drawable/ripple_white_bg">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:drawableLeft="@mipmap/my_collect_icon"
-            android:drawablePadding="16dp"
-            android:gravity="center_vertical"
-            android:text="我的订阅"
             android:textColor="#333"
             android:textSize="14sp" />
 
@@ -223,20 +155,19 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_message_center"
+        android:id="@+id/rl_my_subscibe"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-
         android:background="@drawable/ripple_white_bg">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="14dp"
-            android:drawableLeft="@mipmap/help_icon"
+            android:layout_marginLeft="16dp"
+            android:drawableLeft="@mipmap/my_subscribe_icon"
             android:drawablePadding="16dp"
             android:gravity="center_vertical"
-            android:text="消息中心"
+            android:text="我的订阅"
             android:textColor="#333"
             android:textSize="14sp" />
 
@@ -256,6 +187,77 @@
         android:layout_marginLeft="16.5dp"
         android:layout_marginRight="16.5dp"
         android:background="@color/divide" />
+
+    <RelativeLayout
+        android:id="@+id/rl_mycollect"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@drawable/ripple_white_bg">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:drawableLeft="@mipmap/my_collect_icon"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:text="我的收藏"
+            android:textColor="#333"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="16dp"
+            android:src="@mipmap/step_arrow_icon" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="16.5dp"
+        android:layout_marginRight="16.5dp"
+        android:background="@color/divide" />
+
+
+    <RelativeLayout
+        android:id="@+id/rl_message_center"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+
+        android:background="@drawable/ripple_white_bg">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="14dp"
+            android:drawableLeft="@mipmap/my_message_icon"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            android:text="消息中心"
+            android:textColor="#333"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="16dp"
+            android:src="@mipmap/step_arrow_icon" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/divide">
+
+    </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/rl_help"
