--- a/news/app/src/main/res/layout/activity_journal.xml
+++ b/news/app/src/main/res/layout/activity_journal.xml
@@ -171,6 +171,7 @@
                 android:drawablePadding="7.5dp"
                 android:text="订阅"
                 android:textColor="#333"
+                android:visibility="invisible"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
