--- a/news/app/src/main/res/layout/activity_register.xml
+++ b/news/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,7 @@
         android:layout_marginLeft="16.5dp"
         android:layout_marginTop="20dp"
         android:background="@null"
-        android:hint="请输入6到到16位账号"
+        android:hint="请输入6到16位账号"
         android:maxLength="16"
         android:paddingLeft="4dp"
         android:shadowColor="@color/black"
@@ -67,6 +67,7 @@
         android:layout_marginTop="20dp"
         android:background="@null"
         android:hint="请输入6到16位密码"
+        android:inputType="textPassword"
         android:paddingLeft="4dp"
         android:shadowColor="@color/black"
         android:textColor="#333"
