--- a/news/app/src/main/res/layout/activity_doc_detail.xml
+++ b/news/app/src/main/res/layout/activity_doc_detail.xml
@@ -37,6 +37,7 @@
         android:id="@+id/sv_all_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:fillViewport="true">
 
         <LinearLayout
@@ -137,7 +138,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="16.5dp"
 
-                    android:background="@drawable/white_circle_solid"
+                    android:background="@drawable/ripple_circle_white"
                     android:elevation="5dp"
                     android:gravity="center">
 
@@ -157,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/white_circle_solid"
+                    android:background="@drawable/ripple_circle_white"
                     android:elevation="5dp"
                     android:gravity="center">
 
@@ -181,7 +182,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="16.5dp"
 
-                    android:background="@drawable/white_circle_solid"
+                    android:background="@drawable/ripple_circle_white"
                     android:elevation="5dp"
                     android:gravity="center">
 
