--- a/news/app/src/main/res/layout/item_my_order.xml
+++ b/news/app/src/main/res/layout/item_my_order.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="85dp"
+    android:background="@drawable/ripple_white_bg"
     android:orientation="vertical">
 
     <TextView
@@ -63,13 +64,14 @@
         android:layout_toLeftOf="@+id/tv_price"
         android:text="微信支付:"
         android:textColor="@color/wanfang_gray_text" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/divide"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="16.5dp"
-        android:layout_marginRight="16.5dp"/>
+        android:layout_marginRight="16.5dp"
+        android:background="@color/divide" />
 
 
 </RelativeLayout>
