--- a/news/app/src/main/res/layout/activity_main.xml
+++ b/news/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,91 +8,100 @@
 
     android:fitsSystemWindows="true"
     tools:context=".ui.activity.MainActivity">
-    <!-- 底部tab -->
 
-    <LinearLayout
-        android:id="@+id/ll_bottom_tab"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:baselineAligned="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/tv_home"
+        <LinearLayout
+            android:id="@+id/ll_bottom_tab"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:background="@drawable/ripple_white_bg"
-            android:drawableTop="@mipmap/mainpage_icon_selected"
-            android:gravity="center"
-            android:paddingTop="5dp"
-            android:text="首页"
-            android:textColor="@color/text_table_selected"
-            android:textSize="12sp" />
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/white"
+            android:baselineAligned="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
 
-        <TextView
-            android:id="@+id/tv_find"
+            <TextView
+                android:id="@+id/tv_home"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:background="@drawable/ripple_white_bg"
+                android:drawableTop="@mipmap/mainpage_icon_selected"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:text="首页"
+                android:textColor="@color/text_table_selected"
+                android:textSize="12sp" />
+
+
+            <TextView
+                android:id="@+id/tv_find"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:background="@drawable/ripple_white_bg"
+                android:drawableTop="@mipmap/search_page_icon"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:text="智搜"
+                android:textColor="@color/text_table"
+                android:textSize="12sp" />
+
+
+            <TextView
+                android:id="@+id/tv_focus"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:background="@drawable/ripple_white_bg"
+                android:drawableTop="@mipmap/treasure_chest_icon"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:text="百宝箱"
+                android:textColor="@color/text_table"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_me"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:background="@drawable/ripple_white_bg"
+                android:drawableTop="@mipmap/mine_page_icon"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:text="我的"
+                android:textColor="@color/text_table"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/fl_container"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:background="@drawable/ripple_white_bg"
-            android:drawableTop="@mipmap/search_page_icon"
-            android:gravity="center"
-            android:paddingTop="5dp"
-            android:text="智搜"
-            android:textColor="@color/text_table"
-            android:textSize="12sp" />
+            android:layout_height="0dp"
 
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_focus"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:background="@drawable/ripple_white_bg"
-            android:drawableTop="@mipmap/treasure_chest_icon"
-            android:gravity="center"
-            android:paddingTop="5dp"
-            android:text="百宝箱"
-            android:textColor="@color/text_table"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_me"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:background="@drawable/ripple_white_bg"
-            android:drawableTop="@mipmap/mine_page_icon"
-            android:gravity="center"
-            android:paddingTop="5dp"
-            android:text="我的"
-            android:textColor="@color/text_table"
-            android:textSize="12sp" />
-
-    </LinearLayout>
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_tab"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
     <FrameLayout
-        android:id="@+id/fl_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-
-        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_tab"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/fl_splash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
+</FrameLayout>
