--- a/news/app/src/main/res/layout/activity_pay_order.xml
+++ b/news/app/src/main/res/layout/activity_pay_order.xml
@@ -39,6 +39,8 @@
         android:id="@+id/ll_sign_one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="11dp"
         android:background="@color/white"
         android:orientation="vertical">
@@ -152,33 +154,56 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-
                     android:text="账户余额"
+
                     android:textColor="#333"
                     android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_remain_insufficient"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginTop="10dp"
-                    android:text="余额不足，请选择其他"
-                    android:textSize="10sp" />
+                    android:layout_marginTop="10dp">
+
+                    <ImageView
+                        android:id="@+id/iv_remian_gou"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@mipmap/orange_gou_icon" />
+
+                    <TextView
+                        android:id="@+id/tv_remain_sum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                        android:text="30.00元"
+                        android:textColor="#333"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tv_remain_insufficient"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:text="账号余额不足，可使用万方卡支付剩余部分"
+                        android:textSize="10sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
-
-            <TextView
-                android:id="@+id/tv_remain_sum"
+            <ImageView
+                android:id="@+id/iv_remain_green_gou"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="16.5dp"
-                android:text="30.00元"
-                android:textColor="#333"
-                android:textSize="12sp" />
+                android:src="@mipmap/green_gou_icon" />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -196,29 +221,64 @@
                 android:layout_marginLeft="16.5dp"
                 android:src="@mipmap/wanfang_card_icon" />
 
-            <TextView
-                android:id="@+id/tv_wanfang_card_num"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_toRightOf="@+id/iv_sign_two"
-                android:text="万方卡 ( 学位卡 : 24587964512 )"
-                android:textColor="#333"
-                android:textSize="12sp" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="万方卡 ( 学位卡 : 24587964512 )"
+                    android:textColor="#333"
+                    android:textSize="12sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="10dp">
+
+                    <ImageView
+                        android:id="@+id/iv_wanfang_gou"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@mipmap/orange_gou_icon" />
+
+                    <TextView
+                        android:id="@+id/tv_wanfang_card_sum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"
+                        android:text="30.00元"
+                        android:textColor="#333"
+                        android:textSize="12sp" />
 
 
-            <TextView
-                android:id="@+id/tv_wanfang_card_sum"
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/iv_wanfang_green_gou"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="16.5dp"
-                android:text="30.00元"
-                android:textColor="#333"
-                android:textSize="12sp" />
+                android:src="@mipmap/green_gou_icon" />
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@color/divide" />
 
         <RelativeLayout
             android:id="@+id/rl_weichat"
