--- a/news/app/src/main/res/layout/activity_doc_detail.xml
+++ b/news/app/src/main/res/layout/activity_doc_detail.xml
@@ -37,8 +37,8 @@
         android:id="@+id/sv_all_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
