--- a/news/app/src/main/res/layout/activity_filter_doc.xml
+++ b/news/app/src/main/res/layout/activity_filter_doc.xml
@@ -48,23 +48,28 @@
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/iv_menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="16.5dp"
-                    android:padding="5dp"
-                    android:paddingLeft="16.5dp"
-                    android:paddingRight="16.5dp"
-                    android:src="@mipmap/ic_meun" />
+
             </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
+                android:background="@color/white"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+
+                    android:paddingLeft="16.5dp"
+                    android:paddingRight="16.5dp"
+                    android:src="@mipmap/ic_menu" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/divide" />
 
                 <RelativeLayout
                     android:id="@+id/rl_selet_one"
