--- a/news/app/src/main/res/layout/activity_login.xml
+++ b/news/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/iv_password_is_see"
             android:background="@null"
-            android:hint="请输入6-16位字符的用户名"
+            android:hint="请输入用户名/邮箱/手机号"
             android:lines="1"
             android:maxLines="1"
             android:paddingLeft="4dp"
@@ -83,7 +83,7 @@
                 android:layout_marginLeft="16.5dp"
                 android:layout_toLeftOf="@id/iv_password_is_see"
                 android:background="@null"
-                android:hint="请输入6到16位密码"
+                android:hint="请输入6-16位密码"
                 android:inputType="textPassword"
                 android:lines="1"
                 android:maxLines="1"
