--- a/news/app/src/main/res/layout/item_main_head.xml
+++ b/news/app/src/main/res/layout/item_main_head.xml
@@ -15,8 +15,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginBottom="15dp">
+        android:layout_height="90dp">
+
+        <TextView
+            android:id="@+id/tv_meeting"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_white_bg"
+            android:drawablePadding="10dp"
+            android:drawableTop="@mipmap/you_love_icon"
+            android:gravity="center"
+            android:paddingTop="15dp"
+            android:text="每周优选"
+            android:textColor="@color/text_table"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_special"
@@ -48,20 +62,6 @@
             android:textColor="@color/text_table"
             android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/tv_meeting"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:background="@drawable/ripple_white_bg"
-            android:drawablePadding="10dp"
-            android:drawableTop="@mipmap/you_love_icon"
-            android:gravity="center"
-            android:paddingTop="15dp"
-            android:text="每周优选"
-            android:textColor="@color/text_table"
-            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_journal"
@@ -89,7 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/white"
-        android:visibility="gone">
+      >
 
         <ImageView
             android:id="@+id/iv_last_news_icon"
