--- a/news/app/src/main/res/values/arrays.xml
+++ b/news/app/src/main/res/values/arrays.xml
@@ -402,6 +402,10 @@
         <item>微信支付</item>
         <item>余额支付</item>
     </string-array>
+    <string-array name="payMethod2">
+        <item>支付宝支付</item>
+        <item>微信支付</item>
 
+    </string-array>
 
 </resources>
