--- a/news/app/src/main/res/values/styles.xml
+++ b/news/app/src/main/res/values/styles.xml
@@ -41,6 +41,15 @@
         <item name="android:windowExitAnimation">@anim/top_right_fade_out</item>
     </style>
 
+
+    <style name="PopFromBottom">
+        <item name="android:windowEnterAnimation">@anim/bottom_entry</item>
+        <!-- 指定显示的动画xml -->
+
+        <item name="android:windowExitAnimation">@anim/top_entry</item>
+        <!-- 指定消失的动画xml -->
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
